Primary key check added.